fixed logo to be centered when on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@
 
 
 .stars {
-    background: rgb(2, 0, 5) url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
+    background: rgb(10, 6, 8) url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) repeat;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -348,5 +348,6 @@ h3 {
 
     .hero-head {
         display: block;
+        margin-left: 0rem;
     }
 }
